--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ classes: wide
 {% endif %}
 
 {% for post in posts %}
-  {% include archive-single.html %}
+  {% include archive-single2.html %}
 {% endfor %}
 
 {% include paginator.html %}
